# venture-associate

./: .env.development  .replit  README.md  jest.config.js  next.config.js  package-lock.json  package.json  pyproject.toml  replit.nix  server.js  tailwind.config.js
.next/: trace
app/: config.py  db.py  main.py
attached_assets/: Pasted--Updated-and-tested-venture-information-collector-With-files-URLS-from-goo-1740863773897.txt  Pasted--const-express-require-express-const-router-express-Router-const-bcrypt-require-bcrypt-1735309382418.txt  Pasted--venture-associate-0-1-0-dev-concurrently-npm-run-server-npm-run-start-0-0-venture-as-1740602568710.txt  Pasted--venture-associate-0-1-0-start-HOST-0-0-0-0-PORT-3000-react-scripts-start-There-might-be-a-pro-1735220328608.txt  Pasted--venture-associate-cd-app-python-main-py-Traceback-most-recent-call-last-File-home-runne-1735052300247.txt  Pasted--venture-associate-npm-run-build-venture-associate-0-1-0-build-react-scripts-build-ACreat-1735311706648.txt  Pasted--venture-associate-npm-test-venture-associate-0-1-0-test-jest-FAIL-src-api-tests-auth--1735218759296.txt  Pasted--venture-associate-npm-test-venture-associate-0-1-0-test-jest-FAIL-src-components-tests--1735221567443.txt  Pasted--venture-associate-npm-test-venture-associate-0-1-0-test-jest-PASS-src-components-tests--1735309051213.txt  Pasted--venture-associate-npm-test-venture-associate-0-1-0-test-jest-PASS-src-components-tests--1735309255765.txt  Pasted--venture-associate-npm-test-venture-associate-0-1-0-test-jest-PASS-src-components-tests--1735384207586.txt  (+14 more)
(+77 files in other folders)
